k3s/on-line-boutique/templates/networkpolicy-allow-cartservice-to-redis-cart-6379.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cartservice-to-redis-cart-6379
  namespace: online-boutique
  labels:
    app.kubernetes.io/name: allow-cartservice-to-redis-cart-6379
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: on-line-boutique
    cloudman.io/creator: Anderson-Dutra
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis-cart
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: cartservice
      ports:
        - protocol: TCP
          port: 6379
